package keijumt.design_pattern.pattern.proxy

interface Subject {
    fun request1()
    fun request2()
    fun request3()
}